--- a/css/classy-nav.css
+++ b/css/classy-nav.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'classyfonts';
-    src: url(../../fonts/classy-fonts.eot?fftrrv);
-    src: url(../../fonts/classy-fonts.eot?fftrrv#iefix) format("embedded-opentype"), url(../../fonts/classy-fonts.ttf?fftrrv) format("truetype"), url(../../fonts/classy-fonts.woff?fftrrv) format("woff"), url(../../fonts/classy-fonts.svg?fftrrv#classyfonts) format("svg");
+    src: url(../fonts/classy-fonts.eot?fftrrv);
+    src: url(../fonts/classy-fonts.eot?fftrrv#iefix) format("embedded-opentype"), url(../fonts/classy-fonts.ttf?fftrrv) format("truetype"), url(../fonts/classy-fonts.woff?fftrrv) format("woff"), url(../fonts/classy-fonts.svg?fftrrv#classyfonts) format("svg");
     font-weight: normal;
     font-style: normal
 }
@@ -486,7 +486,9 @@
     clear: both;
     z-index: 10
 }
-
+.breakpoint-on .classynav ul li.divider {
+    display: none;
+}
 .breakpoint-on .classynav ul li a {
     padding: 0 15px;
     height: 45px;
@@ -498,7 +500,8 @@
     position: relative;
     top: 0;
     left: 0;
-    box-shadow: none
+    box-shadow: none;
+    background-color: var(--primary-color);
 }
 
 .breakpoint-on .classynav ul li .dropdown li .dropdown {
@@ -553,7 +556,8 @@
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
-    width: 100%
+    width: 100%;
+    padding: 0;
 }
 
 .breakpoint-on .classynav ul li .megamenu {
@@ -574,7 +578,7 @@
 }
 
 .breakpoint-on .classynav>ul>li>a {
-    background-color: #f2f4f8;
+    background-color: var(--primary-color);
     border-bottom: 1px solid rgba(255, 255, 255, .5)
 }
 
