--- a/css/custom.css
+++ b/css/custom.css
@@ -135,3 +135,16 @@ a {
 .card img {
     height: 150px;
 }
+table.table1 > thead > tr > th {
+    background-color: var(--primary-color);
+    color: #fff;
+    font-weight: 700;
+}
+table.table1 > tbody > tr > td:first-child {
+    background-color: #E9E9E9;
+    color: #555;
+    text-align: left;
+    padding-left: 2%;
+    border-right: #FFF solid 2px;
+    border-bottom: #F7F7F7 solid 1px;
+}
