--- a/css/style.css
+++ b/css/style.css
@@ -1738,7 +1738,8 @@ textarea:focus, input:focus {
 	}
 }
 .room-service ul li img {
-	padding-right: 10px
+	padding-right: 10px;
+	filter: brightness(0.25);
 }
 .room-review-area {
 	position: relative;
@@ -2489,7 +2490,7 @@ textarea:focus, input:focus {
 }
 .breadcrumb-content .breadcrumb .breadcrumb-item+.breadcrumb-item::before {
 	content: '\f105';
-	font-family: "FontAwesome";
+	font-family: "Font Awesome 5 Pro";
 	color: #fff
 }
 .single-post-area {
