--- a/css/style.css
+++ b/css/style.css
@@ -1034,7 +1034,9 @@ textarea:focus, input:focus {
 	height: 302px;
 	overflow: hidden;
 	border-right: 1px solid rgba(255, 255, 255, .2);
-	border-left: 1px solid rgba(255, 255, 255, .2)
+	border-left: 1px solid rgba(255, 255, 255, .2);
+	margin: 0.825rem;
+    border-radius: 0.625rem;
 }
 /* @media only screen and (max-width:767px) {
 	.single-project-slide {
